# DoxAtlas-data-api

./: .dockerignore  .env.example  API_PROTOCOL.md  Dockerfile  README.md  changelog  dev_background.md  docker-compose.yml  pyproject.toml
sql/: migration_raw_social_quality_fields.sql  schema.sql
src/cn_hk_collector/: __init__.py  akshare_market_data.py  cli.py  content_filters.py  db.py  market.py  media_content_relevance.py  media_dedupe.py  runner.py  settings.py  social_quality.py  ticker_entity_registry.py
src/cn_hk_collector/collectors/: __init__.py  chinese_text.py  cn_hk_media_client.py  crawl_log.py  guba_client.py
src/cn_hk_collector/collectors/guba_utils/: Parser.py  ProxyManager.py  SmartBatchCrawler.py  SmartProxyManager.py  __init__.py  proxy_provider.py
src/doxatlas_data_api/: __init__.py  app.py  config.py  main.py  schemas.py
tests/: __init__.py  test_api_contract.py  test_filters_and_labeling.py  test_guba_smart_scheduler.py  test_market_and_dedupe.py  test_proxy_provider.py  test_social_quality.py
